# test-localization

./: .gitignore  LICENSE  l10n.toml  localeutils.sh  main.py  pyproject.toml
locales/en-GB/LC_MESSAGES/: messages.po
locales/en-OWO/LC_MESSAGES/: messages.po
locales/en-US/LC_MESSAGES/: messages.pot
locales/en-owo/LC_MESSAGES/: messages.po
locales/templates/: base.pot
locales/zh-TW/: base.po
locales/zh-TW/LC_MESSAGES/: messages.po
locales/zh_hant/LC_MESSAGES/: bot.po
utils/: i18n.py  translations.py
