[tool.poetry]
name = "test-localization"
version = "0.1.0"
description = ""
authors = ["Sophie Cheung <me@kcomain.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Babel = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
